app/SowingMeApi/sandbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: affiliate-api
  namespace: webservices-sandbox
spec:
  selector:
    workload.user.cattle.io/workloadselector: deployment-webservices-sandbox-affiliate-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
