app/SowingMeApi/dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/creatorId: cwolsen
  labels:
    cattle.io/creator: norman
  name: sowing-me-api
  namespace: ws-dev
  selfLink: /apis/networking.k8s.io/v1/namespaces/ws-dev/ingresses/sowing-me-api
spec:
  ingressClassName: nginx
  rules:
  - host: api-sowing-me.dev.ubixsys.com
    http:
      paths:
      - backend:
          service:
            name: sowing-me-api
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  - host: sowing-me-api.dev.ubixsys.com
    http:
      paths:
      - backend:
          service:
            name: sowing-me-api
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
      - api-sowing-me.dev.ubixsys.com
      - sowing-me-api.dev.ubixsys.com
      secretName: tls-wildcard-ubixsys-dev
status:
  loadBalancer:
    ingress:
      - hostname: kube-001.brainchurts.com
      - hostname: kube-002.brainchurts.com
      - hostname: kube-003.brainchurts.com
      - hostname: kube-004.brainchurts.com
