app/SowingMeApi/sandbox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/creatorId: cwolsen
  name: sowingme-api
  namespace: ws-sandbox
  selfLink: /apis/networking.k8s.io/v1/namespaces/ws-sandbox/ingresses/sowingme-api
spec:
  rules:
  - host: sowingme-api.sb.vsmedia.net
    http:
      paths:
      - backend:
          service:
            name: sowingme-api
            port:
              number: 80
        path: /
        pathType: Prefix
