app/SowingMeApi/staging-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/creatorId: cwolsen
  labels:
    cattle.io/creator: norman
  name: sowingme-api
  namespace: ws-staging
  selfLink: /apis/networking.k8s.io/v1/namespaces/ws-staging/ingresses/sowingme-api
spec:
  ingressClassName: nginx
  rules:
  - host: sowingme-api.staging.ubixsys.com
    http:
      paths:
      - backend:
          service:
            name: sowingme-api
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
      - sowingme-api.staging.ubixsys.com
      secretName: tls-wildcard-ubixsys-staging
status:
  loadBalancer:
    ingress:
      - hostname: kube-001.brainchurts.com
      - hostname: kube-002.brainchurts.com
      - hostname: kube-003.brainchurts.com
      - hostname: kube-004.brainchurts.com
